# academic_paper_organizer

./: .gitattributes  .gitignore  AcademicPaperOrganizer.spec  AcademicPaperOrganizerInstaller.iss  README.md  app_config.json  build_windows_exe.bat  install_windows.bat  paper-organizer-gui.spec  professor_gui.py  pyproject.toml  run_gui.py  시작하기.venv
src/academic_paper_organizer/: __init__.py  config.py  core.py  gui.py  journal_metrics.csv  journal_metrics_sample.csv  journal_metrics_with_quartile_sample.csv  professor_source_registry_template.csv  settings.py  yonsei_professors.csv
src/academic_paper_organizer.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/myapi.egg-info/: PKG-INFO  SOURCES.txt
